--- a/index.html
+++ b/index.html
@@ -1,61 +1,115 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet">
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NEONEX | The Future Starts Here</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
+  <head>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>NEONEX | The Future Starts Here</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- Hero Section -->
+    <section class="hero">
+      <div class="hero-bg"></div>
 
- <!-- Hero Section -->
-<section class="hero">
-  <div class="hero-bg"></div>
+      <div class="hero-content">
+        <h1 class="neon-text">
+          <span>N</span><span>E</span><span>O</span><span>N</span><span>E</span
+          ><span>X</span>
+        </h1>
 
-  <div class="hero-content">
-    <h1 class="neon-text">
-      <span>N</span><span>E</span><span>O</span><span>N</span><span>E</span><span>X</span>
-    </h1>
+        <p>
+          Where digital identity, creativity, and community converge in real
+          time.
+        </p>
 
-    <p>The future of digital experience. Fast, immersive, and built for tomorrow.</p>
+        <button class="cta" id="openAuth">Enter the Future</button>
 
-    <button class="cta">Enter the Future</button>
+        <div class="info-tooltip">
+          <span class="info-icon">i</span>
+          <div class="tooltip-box">
+            NEONEX is a next-generation social network where creators, thinkers,
+            and futurists connect in real time through immersive digital spaces.
+          </div>
+        </div>
+      </div>
+    </section>
 
-    <div class="info-tooltip">
-      <span class="info-icon">i</span>
-      <div class="tooltip-box">
-        NEONEX is a conceptual futuristic landing page showcasing immersive UI,
-        cyberpunk aesthetics, and next-gen web design.
+    <!-- Content Section -->
+    <section class="features">
+      <h2>Why NEONEX?</h2>
+      <div class="feature-cards">
+        <div class="card">
+          <h3>Futuristic Design</h3>
+          <p>Inspired by cyberpunk and next-gen interfaces.</p>
+        </div>
+        <div class="card">
+          <h3>Clean & Minimal</h3>
+          <p>Focused on clarity, readability, and visual impact.</p>
+        </div>
+        <div class="card">
+          <h3>Responsive Layout</h3>
+          <p>Looks great on desktop, tablet, and mobile.</p>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <p>© 2026 NEONEX — Created by Antonio Juan</p>
+    </footer>
+
+    <script src="script.js" defer></script>
+
+    <!-- AUTH MODAL -->
+    <div class="auth-overlay" id="authOverlay">
+      <div class="auth-card">
+        <h2 id="formTitle">Login</h2>
+
+        <form id="authForm">
+          <input type="email" placeholder="Email" required />
+          <input type="password" placeholder="Password" required />
+          <input
+            type="password"
+            id="confirmPassword"
+            placeholder="Confirm Password"
+            hidden
+          />
+
+          <button type="submit" class="cta">Access System</button>
+        </form>
+
+        <p class="auth-switch">
+          Don’t have an account?
+          <span id="toggleAuth">Sign up</span>
+        </p>
       </div>
     </div>
-  </div>
-</section>
+    <!-- AUTH MODAL -->
+    <div class="auth-overlay" id="authOverlay">
+      <div class="auth-card">
+        <h2 id="formTitle">Login</h2>
 
+        <form id="authForm">
+          <input type="email" placeholder="Email" required />
+          <input type="password" placeholder="Password" required />
+          <input
+            type="password"
+            id="confirmPassword"
+            placeholder="Confirm Password"
+            hidden
+          />
 
-  <!-- Content Section -->
-  <section class="features">
-    <h2>Why NEONEX?</h2>
-    <div class="feature-cards">
-      <div class="card">
-        <h3>Futuristic Design</h3>
-        <p>Inspired by cyberpunk and next-gen interfaces.</p>
-      </div>
-      <div class="card">
-        <h3>Clean & Minimal</h3>
-        <p>Focused on clarity, readability, and visual impact.</p>
-      </div>
-      <div class="card">
-        <h3>Responsive Layout</h3>
-        <p>Looks great on desktop, tablet, and mobile.</p>
+          <button type="submit" class="cta">Access System</button>
+        </form>
+
+        <p class="auth-switch">
+          Don’t have an account?
+          <span id="toggleAuth">Sign up</span>
+        </p>
       </div>
     </div>
-  </section>
-
-  <footer>
-    <p>© 2026 NEONEX — Created by Antonio Juan</p>
-  </footer>
-
-  <script src="script.js" defer></script>
-</body>
+  </body>
 </html>
